[package]
name = "acpplinter"
version = "0.7.5"
authors = ["Tommaso Checchi <tommaso.checchi1@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.4"
clap = "2.33"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
regex = "1.3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.2"
